scribble-test/src/test/resources/good/misc/globals/grecursion/Recursion15.scr
module parsing.globals.grecursion.Recursion15;


global protocol Recursion15(role A, role B)
{
	rec X
	{
		m() from A to B;
		choice at A
		{
			m1() from A to B;  // Comment bad
			continue X;
		}
		or
		{
			m2() from A to B;
		}
	}
}
